feat: Almost Home page complete, all structure HTML and CSS complete

--- a/index.html
+++ b/index.html
@@ -57,6 +57,70 @@
           >
         </form>
       </header>
+
+      <article>
+        <section class="mostSearch">
+          <h3>Mais utilizados</h3>
+
+          <ol role="list">
+            <li>
+              <img src="https://www.google.com/s2/favicons?domain=youtube.com" alt="Logo do YouTube">
+              <a href="https://www.youtube.com/">YouTube</a>
+            </li>
+
+            <li>
+              <img src="https://www.google.com/s2/favicons?domain=rocketseat.com.br" alt="Logo da RocketSeat">
+              <a href="https://app.rocketseat.com.br/">RocketSeat</a>
+            </li>
+
+            <li>
+              <img src="https://www.google.com/s2/favicons?domain=https://mail.google.com/mail/u/0/#inbox" alt="Logo do Gmail">
+              <a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a>
+            </li>
+
+            <li>
+              <img src="https://www.google.com/s2/favicons?domain=chatgpt.com/" alt="Logo do ChatGPT">
+              <a href="https://chatgpt.com/">ChatGPTeta</a>
+            </li>
+
+            <li>
+              <img src="https://www.google.com/s2/favicons?domain=https://descomplica.lyceum.com.br/AOnline3/#/login" alt="Logo d">
+              <a href="https://descomplica.lyceum.com.br/AOnline3/#/login">Secretária Descomplica</a>
+            </li>
+          </ol>
+        </section>
+
+        <section class="interestingSearch">
+          <h3>Sempre bom dá uma olhada</h3>
+
+          <ol role="list">
+            <li>
+              <img src="https://www.google.com/s2/favicons?domain=github.com" alt="Logo do Github">
+              <a href="https://github.com/FMessiasCA">Github</a>
+            </li>
+
+            <li>
+              <img src="https://www.google.com/s2/favicons?domain=linkedin.com" alt="Logo do LinkedIn">
+              <a href="https://www.linkedin.com/feed/">LinkedIn</a>
+            </li>
+
+            <li>
+              <img src="https://www.google.com/s2/favicons?domain=tabnews.com.br" alt="Logo do TabNews">
+              <a href="https://www.tabnews.com.br/">TabNews</a>
+            </li>
+
+            <li>
+              <img src="https://www.google.com/s2/favicons?domain=indeed.com" alt="Logo do Indeed">
+              <a href="https://br.indeed.com/">Indeed</a>
+            </li>
+
+            <li>
+              <img src="https://www.google.com/s2/favicons?domain=thenewscc.com.br" alt="Logo do TheNews">
+              <a href="https://thenewscc.beehiiv.com/">TheNews</a>
+            </li>
+          </ol>
+        </section>
+      </article>
     </main>
   </div>
 </body>
