--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <ol role="list">
             <li>
               <img src="https://www.google.com/s2/favicons?domain=youtube.com" alt="Logo do YouTube">
-              <a href="https://www.youtube.com/">YouTube</a>
+              <a href="https://www.youtube.com/" require>YouTube</a>
             </li>
 
             <li>
